--- a/Battery Service Support/Views/Home/Index.cshtml
+++ b/Battery Service Support/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["NavTitle"] = "Dashboard";
+    ViewData["NavTitle"] = "Login";
 }
 
-<h1>Dit is het Dashboard</h1>
+<h1>Hier komt de login pagina</h1>
