create relatieIndex view

--- a/Battery Service Support/Views/Shared/_Layout.cshtml
+++ b/Battery Service Support/Views/Shared/_Layout.cshtml
@@ -44,9 +44,9 @@
             <b>JOJO</b> Systems
         </div>
         <ul class="sidebar-navigation">
-            <li class="header">Navigation</li>
+            <li class="header">Navigatie</li>
             <li>
-                <a asp-controller="Home" asp-action="Index">
+                <a asp-controller="Relatie" asp-action="Index">
                     <i class="fas fa-home" aria-hidden="true"></i> Dashboard
                 </a>
             </li>
@@ -68,7 +68,7 @@
             </li>
             <li>
                 <a href="#">
-                    <i class="fas fa-info-circle" aria-hidden="true"></i> Information
+                    <i class="fas fa-info-circle" aria-hidden="true"></i> Informatie
                 </a>
             </li>
         </ul>
