--- a/Battery Service Support/Views/Shared/_Layout.cshtml
+++ b/Battery Service Support/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     </a>
                 </li>*@
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Customer" asp-action="Login" asp-route-id="1">
+                    <a class="nav-link" asp-controller="" asp-action="" asp-route-id="">
                         <div class="fas fa-user" style="width: 24px; height: 24px;"></div>
                         <span class="sr-only">(current)</span>
                     </a>
