--- a/Battery Service Support/Views/Shared/Components/InstallatieDetail/Default.cshtml
+++ b/Battery Service Support/Views/Shared/Components/InstallatieDetail/Default.cshtml
@@ -15,30 +15,12 @@
             {
                 <tr data-href="/Batterij/Detail/@item.Id">
                     <td>
-                        @*<div class="form-group row ">
-                            <label asp-for="@item.Artikel.Naam" class="col-sm-2 col-form-label">@Html.DisplayNameFor(modelItel => item.Artikel.Naam)</label>
-                            <div class="col-sm-10">
-                                <input asp-for="@item.Artikel.Naam" type="text" readonly class="form-control-plaintext" value="@item.Artikel.Naam" />
-                            </div>
-                            <label asp-for="@item.Locatie" class="col-sm-2 col-form-label">@Html.DisplayNameFor(modelItel => item.Locatie)</label>
-                            <div class="col-sm-10">
-                                <input asp-for="@item.Locatie" type="text" readonly class="form-control-plaintext" value="@item.Locatie" />
-                            </div>
-                            <label asp-for="@item.GeplaatstIn" class="col-sm-2 col-form-label">@Html.DisplayNameFor(modelItel => item.GeplaatstIn)</label>
-                            <div class="col-sm-10">
-                                <input asp-for="@item.GeplaatstIn" type="text" readonly class="form-control-plaintext" value="@item.GeplaatstIn" />
-                            </div>
-                            <label asp-for="@item.Datum" class="col-sm-2 col-form-label">@Html.DisplayNameFor(modelItel => item.Datum)</label>
-                            <div class="col-sm-10">
-                                <input asp-for="@item.Datum" type="text" readonly class="form-control-plaintext" value="@item.Datum.ToShortDateString()" />
-                            </div>
-                        </div>*@
                         <div class="card-text">
                             <div class="text-left">
                                 <div class="row">
                                     <div class="col-md-6 h5">@Html.DisplayFor(modelItel => item.Artikel.Naam)</div>
                                     <div class="col-md-3">@Html.DisplayNameFor(modelItem => item.Datum):</div>
-                                    <div class="col-md-3">@item.Datum.ToShortDateString()</div>
+                                    <div id="datetrigger" class="col-md-3">@item.Datum.ToShortDateString()</div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-3">@Html.DisplayNameFor(modelItem => item.Locatie):</div>
