--- a/Battery Service Support/Views/_ViewImports.cshtml
+++ b/Battery Service Support/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using ViewModel
+﻿@using Model
+@using ViewModel
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Battery Service Support
