--- a/Battery Service Support/Views/Account/Register.cshtml
+++ b/Battery Service Support/Views/Account/Register.cshtml
@@ -1,35 +1,49 @@
 ﻿@model ViewModel.RegisterViewModel
 
 @{
-    ViewData["NavTitle"] = "Dashboard";
+    ViewData["NavTitle"] = "Gebruikersregistratie";
 }
 
-<div class="row">
-    <div class="col-md-5 offset-1">
+<div class="container-fluid">
+    <div class="col-md-6">
         <h1>Gebruikersregistratie</h1>
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="col-form-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+        <div class="card border-0 shadow">
+            <div class="card-body">
+                <form asp-action="Register" method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="col-form-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Naam" class="col-form-label"></label>
+                        <input asp-for="Naam" class="form-control" />
+                        <span asp-validation-for="Naam" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="XjoGebruikerCode" class="col-form-label"></label>
+                        <input asp-for="XjoGebruikerCode" class="form-control" />
+                        <span asp-validation-for="XjoGebruikerCode" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserName" class="col-form-label"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Password" class="col-form-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ConfirmPassword" class="col-form-label"></label>
+                        <input asp-for="ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Registreren</button>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="UserName" class="col-form-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="col-form-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="col-form-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Registreren</button>
-        </form>
+        </div>
     </div>
 </div>
