--- a/Battery Service Support/Views/Administration/ListRoles.cshtml
+++ b/Battery Service Support/Views/Administration/ListRoles.cshtml
@@ -2,45 +2,59 @@
 @{
     ViewData["NavTitle"] = "Rollen";
 }
-    <div class="container-fluid">
-        <div class="col-md-6">
-            <h1>Alle Rollen</h1>
+<div class="container-fluid">
+    <div class="col-md-6">
+        <h1>Alle Rollen</h1>
 
-            @if (Model.Any())
+        @if (Model.Any())
+        {
+            <a class="btn btn-primary mb-3" asp-controller="administration" asp-action="CreateRole">
+                Nieuwe Rol
+            </a>
+            @foreach (var role in Model)
             {
-                <a class="btn btn-primary mb-3" asp-controller="administration"  asp-action="CreateRole">
-                    Nieuwe Rol
-                </a>
-                @foreach (var role in Model)
-                {
-                    <div class="card border-0 shadow">
-                        <div class="card-body">
-                            <h5 class="card-title">@Html.DisplayFor(modelItem => role.RoleName)</h5>
-                        </div>
-                        <div class="card-footer">
+                <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">@Html.DisplayFor(modelItem => role.RoleName)</h5>
+                    </div>
+                    <div class="card-footer">
+                        <form method="post" asp-controller="Administration" asp-action="DeleteRole" asp-route-id="@role.RoleId">
                             <a class="btn btn-primary" asp-controller="Administration" asp-action="EditRole" asp-route-id="@role.RoleId">
                                 Edit
                             </a>
-                            <a href="#" class="btn btn-danger">Verwijder</a>
-                        </div>
-                    </div>
-                }
-            }
-            else
-            {
-                <div class="card">
-                    <div class="card-header">
-                        Nog geen rollen aangemaakt
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            Gebruik onderstaande knop om een Rol aan te maken
-                        </h5>
-                        <a class="btn btn-primary" asp-controller="administration" asp-action="CreateRole">
-                            Nieuwe Rol
-                        </a>
+                            <span id="confirmDeleteSpan_@role.RoleId" style="display:none">
+                                <span>Ben je zeker dat je deze Rol wil verwijderen?</span>
+                                <button type="submit" class="btn btn-danger">Ja</button>
+                                <a href="#" class="btn btn-primary" onclick="confirmDelete('@role.RoleId', false)">Nee</a>
+                            </span>
+
+                            <span id="deleteSpan_@role.RoleId">
+                                <a href="#" class="btn btn-danger" onclick="confirmDelete('@role.RoleId', true)">Verwijder</a>
+                            </span>
+                        </form>
                     </div>
                 </div>
             }
-        </div>
+        }
+        else
+        {
+            <div class="card">
+                <div class="card-header">
+                    Nog geen rollen aangemaakt
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Gebruik onderstaande knop om een Rol aan te maken
+                    </h5>
+                    <a class="btn btn-primary" asp-controller="administration" asp-action="CreateRole">
+                        Nieuwe Rol
+                    </a>
+                </div>
+            </div>
+        }
     </div>
+</div>
+
+@section Scripts{
+    <script src="~/js/CustomScript.js"></script>
+}
