--- a/Battery Service Support/Views/Installatie/Detail.cshtml
+++ b/Battery Service Support/Views/Installatie/Detail.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ViewModel.InstallatieDetailViewModel
 @{
     ViewData["NavTitle"] = "Dashboard";
+    ViewData["installatieId"] = Model.Installatie.Id;
 }
 <div class="container-fluid">
     <div class="row">
