--- a/Battery Service Support/Views/Administration/EditRole.cshtml
+++ b/Battery Service Support/Views/Administration/EditRole.cshtml
@@ -49,7 +49,30 @@
                             </div>
                             <div class="card-footer">
                                 <a asp-controller="Administration" asp-action="EditUsersInRole" asp-route-roleId="@Model.Id" class="btn btn-primary">
-                                    Toevoegen/verwijderen
+                                    Beheren
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card mt-3">
+                            <div class="card-header">
+                                <h3>Claims van deze Rol</h3>
+                            </div>
+                            <div class="card-body">
+                                @if (Model.Claims.Any())
+                                {
+                                    foreach (var claim in Model.Claims)
+                                    {
+                                        <h5 class="card-title">@Html.DisplayFor(modelItem => claim)</h5>
+                                    }
+                                }
+                                else
+                                {
+                                    <h5 class="card-title">Op dit moment geen Claims toegewezen</h5>
+                                }
+                            </div>
+                            <div class="card-footer">
+                                <a asp-controller="Administration" asp-action="EditUsersInRole" asp-route-roleId="@Model.Id" class="btn btn-primary">
+                                    Beheren
                                 </a>
                             </div>
                         </div>
