--- a/Battery Service Support/Views/Administration/EditUser.cshtml
+++ b/Battery Service Support/Views/Administration/EditUser.cshtml
@@ -67,7 +67,7 @@
                             }
                         </div>
                         <div class="card-footer">
-                            <a asp-controller="Administration" asp-action="ListUsers" asp-route-UserId="@Model.Id" class="btn btn-primary">
+                            <a asp-controller="Administration" asp-action="ManageUserRoles" asp-route-userId="@Model.Id" class="btn btn-primary">
                                 Beheer Rollen
                             </a>
                         </div>
