--- a/Battery Service Support/Views/Administration/ListUsers.cshtml
+++ b/Battery Service Support/Views/Administration/ListUsers.cshtml
@@ -8,7 +8,7 @@
 
         @if (Model.Any())
         {
-            <a class="btn btn-primary mb-3" asp-controller="Account"  asp-action="Register" >
+            <a class="btn btn-primary mb-3" asp-controller="Account" asp-action="Register">
                 Nieuwe Gebruiker
             </a>
             @foreach (var user in Model)
@@ -18,10 +18,20 @@
                         <h5 class="card-title">@Html.DisplayFor(modelItem => user.UserName)</h5>
                     </div>
                     <div class="card-footer">
-                        <a class="btn btn-primary" asp-controller="Administration" asp-action="EditUser" asp-route-id="@user.UserId">
-                            Edit
-                        </a>
-                        <a href="#" class="btn btn-danger">Verwijder</a>
+                        <form method="post" asp-controller="Administration" asp-action="DeleteUser" asp-route-id="@user.UserId">
+                            <a class="btn btn-primary" asp-controller="Administration" asp-action="EditUser" asp-route-id="@user.UserId">
+                                Edit
+                            </a>
+                            <span id="confirmDeleteSpan_@user.UserId" style="display:none">
+                                <span>Ben je zeker dat je deze gebruiker wil verwijderen?</span>
+                                <button type="submit" class="btn btn-danger">Ja</button>
+                                <a href="#" class="btn btn-primary" onclick="confirmDelete('@user.UserId', false)">Nee</a>
+                            </span>
+
+                            <span id="deleteSpan_@user.UserId">
+                                <a href="#" class="btn btn-danger" onclick="confirmDelete('@user.UserId', true)">Verwijder</a>
+                            </span>
+                        </form>
                     </div>
                 </div>
             }
@@ -44,3 +54,7 @@
         }
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/CustomScript.js"></script>
+}
